--- a/resources.qrc
+++ b/resources.qrc
@@ -4,5 +4,8 @@
         <file>resources/bullet.png</file>
         <file>resources/player.png</file>
         <file>resources/Background.png</file>
+        <file>resources/bart.jpg</file>
+        <file>resources/mikail.jpg</file>
+        <file>resources/osman.jpg</file>
     </qresource>
 </RCC>
